test/1.2/errors/T_EIDENT.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

port p {
    /// ERROR EIDENT
    parameter foo = x;
}

/// ERROR EIDENT
typedef int intarray[FOO];

typedef uint8 typename;
extern int value;

method init {
    local int vect iv;
    /// ERROR EIDENT
    select x in (iv) where (x > 0) {
    } else {
    }
    // SIMICS-8999
    local bool cond;
    select s in ([0]) where (cond)
        local int i;
    else
        /// ERROR EIDENT
        log info: "%d", i;
    /// ERROR EIDENT
    foreach x in (iv) {
    }

    // Types and values live in different name spaces
    /// ERROR EIDENT
    typename;
    /// ERROR ETYPE
    local value x;
}
